--- a/about-us-1.css
+++ b/about-us-1.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/bathone.webp");
+  background-image: url("bathone.jpg");
   background-position: 50% 50%;
 }
 
