--- a/about-us-1.css
+++ b/about-us-1.css
@@ -7,6 +7,49 @@
   min-height: 893px;
 }
 
+.nav {
+  background-color:rgba(254, 240, 186, 0.7);
+  list-style-type: none;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  margin-bottom:50px;
+  border-bottom: ridge;
+  border-color: #FEF0BA;
+
+}
+li {
+  display: inline-block;
+  font-size: 25px;
+  padding: 20px;
+}
+ul {
+  padding: 25px;
+  margin: 0 0 0 150px;
+  list-style: none;
+}
+.logo img {
+  position: absolute;
+  margin-top: 9px;
+  margin-left: 10px;
+  border-radius: 20%;
+  filter: drop-shadow(3px 3px 3px rgb(32, 31, 24));
+}
+.nav a {
+  text-decoration: none;
+  width: 100%;
+  display: block;
+  padding: 20px, 15px;
+  color: var(--fontcolour);
+  text-align: center;
+}
+/*gradient nav*/
+nav a:hover{
+  background: -webkit-linear-gradient(50deg, #af9e64 0%, #d3c990 17%, #989983 33%, #636451 67%, #FEF0BA 83%, #b6b27b 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .u-section-1 .u-text-1 {
   font-size: 6rem;
   font-weight: 700;
